<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易点备忘录</string>
    <string name="about_ydmemo">关于易点备忘录</string>
    <string name="about_ydmemo_desc">易点备忘录用于在朋友，团队，家人，上下级之间共同分享备忘；并进行互相提醒、讨论及跟踪</string>
    <string name="about_team">易点互联 版权所有</string>
    <string name="invite_friend_message">易点备忘不错，我们用它记录备忘，下载地址：http://ydmemo.yidianhulian.com</string>
    <string name="sms_invite_friend_message"><strong style='color:#ff0000'>通过短信</strong>邀请通讯录中的联系人使用易点备忘录</string>
    <string name="focus_this_thing_in_memo">这个事情你关注一下：“%1$s”, 我们在易点备忘里跟踪它，下载地址：http://ydmemo.yidianhulian.com</string>
    <string name="post_suggest">意见反馈</string>
    <string name="below_user_not_used">下列您邀请的联系人中没有注册使用易点备忘录，<strong style='color:#ff0000'>通过短信</strong> 邀请他们使用易点备忘录吧</string>
    <string name="post_suggest_desc">请留下您的宝贵意见</string>
    <string name="post">提交</string>
    <string name="more">更多</string>
    <string name="no_notification">没有动态</string>
    <string name="please_input_something">说点什么吧,可@某人</string>
    <string name="please_say_something">说点什么吧</string>
    <string name="placeholder">placeholder</string>
    <string name="call_api_error">加载数据出错</string>
    <string name="navigation_drawer_open">Close navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="add_memo">新增备忘</string>
    <string name="ok">确定</string>
    <string name="confirm_remove_memo">确定删除备忘吗</string>
    <string name="remove_memo_desc">删除备忘后将不可恢复，同时会删除所有的留言、跟踪、提醒</string>
    <string name="at">\@谁</string>
    <string name="clean_all_notifies">清楚所有的动态</string>
    <string name="are_you_sure">确定吗？</string>
    <string name="search_contact">搜索联系人</string>
    <string name="please_waiting">请稍后</string>
    <string name="memo_removed">备忘已被删除</string>
    <string name="by_year">按年</string>
    <string name="repeat_by_day">每%1$s天的%2$s提醒</string>
    <string name="repeat_by_month">每%1$s月的%2$s号%3$s提醒</string>
    <string name="repeat_by_year">每%1$s年的%2$s月%3$s号%4$s提醒</string>
    <string name="repeat_by_week">每%1$s周的星期%2$s %3$s提醒</string>
    <string name="by_month">按月</string>
    <string name="by_week">按周</string>
    <string name="by_day">按天</string>
    <string name="send_pic_desc">图片</string>
    <string name="send_textpic_desc">图文</string>
    <string name="send_draw_desc">手绘</string>
    <string name="send_video_desc">视频</string>
    <string name="send_location_desc">位置</string>
    <string name="welcome">欢迎使用</string>
    <string name="remove">删除</string>
    <string name="memo">备忘</string>
    <string name="launching">启动中</string>
    <string name="trace">跟踪</string>
    <string name="mark_setting">自定义快捷标记</string>
    <string name="delay_5">5</string>
    <string name="delay_10">10</string>
    <string name="delay_30">30</string>
    <string name="delay_60">60</string>
    <string name="delay_setting">提醒延迟\n(分钟)</string>
    <string name="reply_comment">回复TA</string>
    <string name="comment_not_found">留言不存在</string>
    <string name="comment_mark_as">快捷标记为&#8230;&#8230;&#8230;</string>
    <string name="copy">复制</string>
    <string name="mark_as_todo">待办</string>
    <string name="mark_as_done">已处理</string>
    <string name="mark_as_nothing">移除标记</string>
    <string name="download">下载</string>
    <string name="mark_as_idea">想法</string>
    <string name="mark_as_star">标星</string>
    <string name="mark_as_phone">需打电话</string>
    <string name="mark_as_smile">高兴</string>
    <string name="mark_as_surprise">惊讶</string>
    <string name="mark_as_tongue">鬼脸</string>
    <string name="mark_as_love">最爱</string>
    <string name="mark_as_meeting">需讨论</string>
    <string name="mark_as_heart">赞</string>
    <string name="mark_more">更多标记</string>
    <string name="mark_as_priority1">优先级1</string>
    <string name="mark_as_priority2">优先级2</string>
    <string name="mark_as_priority3">优先级3</string>
    <string name="mark_as_priority4">优先级4</string>
    <string name="mark_as_priority5">优先级5</string>
    <string name="mark_as_priority6">优先级6</string>
    <string name="mark_as_priority7">优先级7</string>
    <string name="mark_as_priority8">优先级8</string>
    <string name="mark_as_priority9">优先级9</string>
    <string name="my_setting">个人设置</string>
    <string name="save_failed">保存失败</string>
    <string name="cancel">取消</string>
    <string name="notification_center">动态中心</string>
    <string name="cancel_remind">移除</string>
    <string name="network_error">网络异常</string>
    <string name="touch_select_date">点击选择提醒时间</string>
    <string name="add">新增</string>
    <string name="my_memo">我的备忘录</string>
    <string name="memo_detail">备忘详情</string>
    <string name="my_follow">我关注的备忘录</string>
    <string name="closed_memo">关闭的备忘录</string>
    <string name="close_memo">关闭备忘</string>
    <string name="memo_has_been_closed">备忘已关闭</string>
    <string name="memo_has_been_resumed">备忘已恢复</string>
    <string name="modify_memo">修改备忘</string>
    <string name="memo_refuse_to_me">被拒绝的备忘</string>
    <string name="no_refuse_memo">没有被拒绝的备忘</string>
    <string name="memo_refuse_to_me_desc">指派给别人但被拒绝的备忘录</string>
    <string name="memo_receive">收到的备忘</string>
    <string name="no_received_memo">没有收到备忘</string>
    <string name="memo_receive_desc">别人为我建立的备忘</string>
    <string name="memo_invite_to_me">收到的关注邀请</string>
    <string name="no_invite_memo">没有任何邀请</string>
    <string name="memo_invite_to_me_desc">别人邀请我关注的备忘录</string>
    <string name="invite_friend">邀请好友</string>
    <string name="invite_friend_desc">邀请亲朋好友、同事一起分享备忘</string>
    <string name="allow_assign_to_me">允许别人为我创建备忘</string>
    <string name="notify_to_me_my_has_comment">我的备忘有回复时通知我</string>
    <string name="notify_to_me_follow_has_comment">关注备忘有回复时通知我</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="agree">接受</string>
    <string name="not_agree">不接受</string>
    <string name="follow">关注</string>
    <string name="not_follow">不关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="follow_has_been_cancelled">已取消关注</string>
    <string name="avatar">头像</string>
    <string name="post_comment">留言</string>
    <string name="post_comment_error">留言失败,点击重试</string>
    <string name="posting">发送中&#8230;&#8230;&#8230;</string>
    <string name="data_in_processing">数据处理中&#8230;&#8230;&#8230;</string>
    <string name="data_post_failed">提交失败</string>
    <string name="data_post_success">提交成功</string>
    <string name="share_to_users">分享给</string>
    <string name="memo_subject">备忘主题</string>
    <string name="memo_subject_is_empty">备忘主题不能为空</string>
    <string name="memo_subject_is_too_long">备忘主题需小于100个字符</string>
    <string name="assign_to_user">指派给</string>
    <string name="memo_desc">备忘说明</string>
    <string name="remind">提醒</string>
    <string name="comment">讨论</string>
    <string name="memo_follower">关注者</string>
    <string name="task">任务</string>
    <string name="add_remind">增加提醒</string>
    <string name="notify_me_later">提醒我</string>
    <string name="modify_remind">修改提醒</string>
    <string name="remind_date">提醒时间</string>
    <string name="remind_title">提醒内容</string>
    <string name="remind_users">提醒谁</string>
    <string name="remind_all_followers">同时提醒分享的朋友</string>
    <string name="cellphone">手机号</string>
    <string name="next">下一步</string>
    <string name="enter_received_code">请输入收到的验证码</string>
    <string name="verify">验 证</string>
    <string name="enter_username">请输入用户名</string>
    <string name="enter_cellphone">请输入11位手机号</string>
    <string name="seprate_line">分割线</string>
    <string name="enter_password">请输入登录密码</string>
    <string name="signup">注册新用户</string>
    <string name="login_error">登录失败，请检查手机号和密码</string>
    <string name="login_if_register">已注册？请登录</string>
    <string name="verify_code_error">验证码错误</string>
    <string name="touch_enter">点击进入</string>
    <string name="hint_setname">设置用户名</string>
    <string name="nickname">昵称</string>
    <string name="new_remind">新提醒</string>
    <string name="i_have_known">知道了</string>
    <string name="remind_after">延后</string>
    <string name="has_error">出错了，点击重试</string>
    <string name="no_trace">还没有进行任何跟踪:\n跟踪包含提醒、任务和里程碑</string>
    <string name="no_comment">说出您的看法</string>
    <string name="no_contact">该设备上没有联系人</string>
    <string name="get_verify_code">获取验证码</string>
    
    <string name="background">背景</string>
    <string name="edit_pwd">修改密码</string>
    <string name="edit_nickname">更改名字</string>
    <string name="old_pwd_hint">请输入旧密码</string>
    <string name="new_pwd_hint">请输入新密码</string>
    <string name="remind_repeat">重复任务</string>
    <string name="remind_addr">提醒地点</string>
    <string name="set_repeat">设置重复</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="day_times">每多少天重复一次</string>
    <string name="week_times">每多少周重复一次</string>
    <string name="month_times">每多少月重复一次</string>
    <string name="year_times">每多少年重复一次</string>
    <string name="day_of_the_week">星期几提醒</string>
    <string name="delay_alert_notice">系统将在%1$d分钟后再次提醒您。</string>
    <string name="remind_ticker">易点备忘录提醒您时间到了</string>
    <string name="notification_reminder_content">来自“%1$s”的提醒</string>
    <string name="never">从不</string>
    <string name="reminder_user_is_empty">请选择提醒对象</string>
    <string name="reminder_content_is_empty">请输入提醒内容；以便到时知道是什么提醒</string>
    <string name="cannot_read_contact">系统读取联系人的权限已经被禁止</string>    
    
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    
    <string name="removing">删除中</string>
    <string name="inviting">邀请中</string>
    <string name="closing">关闭中</string>
    <string name="resuming">恢复中</string>
    <string name="cancelling">正在取消关注</string>
    <string name="invite_has_been_send">邀请已成功发送</string>
    <string name="nickname_is_empty">请输入昵称</string>
    <string name="password_is_empty">密码不能为空</string>
    <string name="change_psw_success">密码修改成功</string>
</resources>
