<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_splash" />

        <EditText
            android:id="@+id/cellphone"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enter_cellphone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="20dp"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seprate_line"
            android:src="@drawable/menu_div2" />

        <EditText
            android:id="@+id/psw"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/button_selector"
            android:textColor="@android:color/white"
            android:text="@string/login" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="20dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/button_selector"
            android:layout_marginTop="44dp"
            android:text="@string/signup"
            android:textSize="13sp" />
    </LinearLayout>

</ScrollView>