<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/signup"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/drawer_bg_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="+86"
                android:textColor="@color/subtitle" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/cellphone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="20dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/get_code"
                android:layout_width="100dp"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/button_selector"
                android:layout_height="wrap_content"
                android:text="@string/get_verify_code" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seprate_line"
            android:src="@drawable/menu_div2" />

        <LinearLayout
            android:id="@+id/verify_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/verify_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/enter_received_code"
                android:paddingLeft="20dp"
                android:singleLine="true" >
            </EditText>

            <Button
                android:id="@+id/do_verify"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/button_selector"
                android:textSize="12sp"
                android:text="@string/verify" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/seprate_line"
                android:src="@drawable/menu_div2" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/enter_username"
                android:imeActionLabel="下一步"
                android:imeOptions="actionNext"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:visibility="gone" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/seprate_line"
                android:src="@drawable/menu_div2" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/signup"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_selector"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/go_login"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/button_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="44dp"
                
                android:ems="15"
                android:gravity="center"
                android:text="@string/login_if_register"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>